[tool.poetry]
name = "contributee"
version = "0.1.0"
description = ""
authors = ["Artem Siryk", "Robert Barinov", "Ivan Borovyi", "Alena Bobovich"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.8.0"